# Generator_PDF

./: .gitignore  Dockerfile  README.md  config.py  data.json  docker-compose.yml  index.html  main.py  nginx.conf  pyproject.toml  requirements.txt  services.py  style.css  test.pptx  test.py  utils.py
department_info/ИИСиЦТ/: 1.json  2.json
modules_odp/: modules.py  testfile.odp
processing_files/: clean_temp.py  clean_tempfiles.py  convert_to_pdf.py  filter_json.py  handler.py  modules.py  testfile.odp  testfile.pptx
src/: config.py  main.py
src/models/: models.py
src/templates/: index.html
src/uploads/: Презентация Microsoft PowerPoint.pptx
src/utils/: utils.py
static/: index.html  style.css  upload-templates.html
static/css/: style.css
static/scripts/: app.js  utils.js
static/templates/: Shablon_ETI(test).odp  Shablon_ETI.odp  Shablon_IGSN.odp  Shablon_IISCT.odp  Shablon_IKIP.odp  Shablon_IPAT.odp  Shablon_MA.odp  Shablon_YUF.odp  Апатитский филиал.odp  Военный учебный центр.odp  Естественно-технологический институт.odp  Институт гуманитарных и социальных наук.odp  Институт интеллектуальных систем и цифровых технологий.odp  Институт креативных индустрий и предпринимательства.odp  Институт педагогики и предпринимательства.odp  Институт педагогики и психологии.odp  Институт прикладных арктических технологий.odp  Колледж МАУ.odp  Медико-биологический институт.odp  Морская академия.odp  Мурманский морской рыбопромышленный колледж имени И.И. Месяцева.odp  Факультет физической культуры и спорта.odp  Филиал Кировск.odp  Филиал Полярный.odp  (+1 more)
