[project]
name = "pythonproject3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "odfpy>=1.4.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "unoserver==3.4",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]
